修改微助力 助力值样式，解决小屏手机无法展示完整的问题

--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -137,7 +137,7 @@
             <span class="wa-myrange">我的排名: <b>{% if current_member_rank_info %}{{ current_member_rank_info.rank }}{% else %}无{% endif %}</b></span>
         <span class="wa-mypower">我的助力值: <b>{% if current_member_rank_info %}{{ current_member_rank_info.power }}{% else %}0{% endif %}</b></span>
         </div>
-        <div style="float: right;margin-right: 25px">
+        <div style="float: right;">
         <span class="wa-totalcount">参与人数: <b>{{ total_participant_count }}</b></span>
         </div>
     </div>
