[X-Ray][b_mall_6002]页面问题【非会员-显示引导关注黄条】-1.获取优惠券页面，2.我的优惠券页面，3.个人中心页面;顺道儿解决"我的优惠券"滚动问题

--- a/weapp/market_tools/tools/coupon/templates/coupon/webapp/my_coupons.html
+++ b/weapp/market_tools/tools/coupon/templates/coupon/webapp/my_coupons.html
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block content-panel %}
-<div class="xui-page {% if not user.is_from_weixin %}notweixin{% endif %} xui-myCouponList-Page wui-swiper">
+<div class="xa-page xui-page {% if not user.is_from_weixin %}notweixin{% endif %} xui-myCouponList-Page wui-swiper">
 
 <!--Tab静态-->
 <div class="wui-swiper-tabs-coupon clearfix">
@@ -173,6 +173,9 @@
 $(document).ready(function($) {
   var bodyHeight = window.document.body.clientHeight;
   var containerHeight = bodyHeight - 47;
+  if($('.xa-guideAttention').length){
+    containerHeight -= 40;
+  }
   $(".wui-swiper-container").css('height', containerHeight );
   $(".wui-swiper-slide").css('height', containerHeight );  
   $("body").css('overflow-y', 'hidden');
