微助力 手机端样式微调

--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -53,7 +53,7 @@
                     </span>
                 </div>
                 <ul class="wa-top100">
-                    <li class="wui-i-top100-title">
+                    <li class="wui-i-top100-title" style="padding: 16px 10px 0;">
                         <span style="margin-left: 5px">排名</span>
                         <span style="margin-left: 18px">会员</span>
                         <span class="fr">助力值</span>
