--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -936,7 +936,8 @@ input.ui-input-text, textarea.ui-input-text {
 }
 .xui-productsList-page .xui-empty-box{
     width:50%;
-    margin:20% auto;
+    margin: 0 auto;
+    padding: 20% 0;
 }
 .xui-productsList-page .xui-goShopping-btn{
     display: block;
