--- a/weapp/market_tools/tools/coupon/templates/coupon/webapp/coupon.html
+++ b/weapp/market_tools/tools/coupon/templates/coupon/webapp/coupon.html
@@ -61,7 +61,7 @@ html,body{
 					<li class="disTc" style="width:14px;"></li>
 					<li class="disTc">
 					 	<!-- 1 2 3状态均存在 -->
-						<a href="./?module=market_tool:coupon&model=usage&action=get&workspace_id=market_tool:coupon&webapp_owner_id={{request.webapp_owner_id}}&project_id=0" class="xui-btn xui-myCoupon-btn">我的优惠券</a>
+						<a href="javascript:void(0);" class="xui-btn xui-myCoupon-btn xa-myCoupon">我的优惠券</a>
 					</li>
 				</ul>
 			</div>
@@ -71,6 +71,15 @@ html,body{
 {% endblock %}
 {% block js %}
 <script type="text/javascript">
+
+    $('body').delegate('.xa-myCoupon', 'click', function(event){
+        if('{{ is_subscribed }}' == 'True'){
+            window.location.href = "./?module=market_tool:coupon&model=usage&action=get&workspace_id=market_tool:coupon&webapp_owner_id={{request.webapp_owner_id}}&project_id=0"
+        }else{
+            $('.xa-guideAttention').click();
+        }
+	});
+
 	$('.xa-getCoupon').click(function(){
 		W.getApi().call({
             app: 'webapp',
