--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -210,6 +210,7 @@
                     if (isUserCenterLink(url) && W.curRequestMemberToken.length == 0) {
                         /* 非会员显示二维码 */
                         showSwiper();
+                         $('.mask').css('background','rgba(0, 0, 0, 0.5)');
                     } else {
                         if( url.indexOf('http://') == 0 || url.indexOf('https://') == 0){
                             window.location.href = url;
