[X-Ray][b_mall_6040]解决bug；删除webapp_content_base无用代码

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
@@ -8,7 +8,7 @@
     </style>
 {% endblock%}
 {% block content-panel %}
-<div id='product_list_contain' data-title="商品列表" class="xui-productsList-page xa-page">
+<div id='product_list_contain' data-title="商品列表" class="xui-productsList-page xa-page" style="{% if not products %}background:#f0f0f0;{% endif %}{% if global_navbar != None %} min-height:calc(100vh - 50px){% endif %}">
 
     
     {% if global_navbar == None %}
@@ -79,18 +79,6 @@
 {% block js %}
 <script type="text/javascript">
 $(document).ready(function() {
-    //区分是否启用全局导航
-    if($('.xui-header').length){
-        $('.xa-page').css('min-height', 'calc(100vh - 40px)');
-    }else{
-        $('.xa-page').css('min-height', 'calc(100vh - 50px)');
-    }
-    //区分商品分类是否为空
-    if($('.xa-empty').length){
-        $('.xa-page').css('background','#f0f0f0');
-    }else{
-        $('.xa-page').css('background','#fff')
-    }
     // 计算列表页面价钱
     $('.xui-products-original').calculProductMemberPriceOrPromotionPrice({
         updateProductPrice: function(event, data){
