修复苹果6plus微助力二维码弹框不能关闭的BUG。优化加载数据的性能。解决红包有效期的问题

--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -63,12 +63,12 @@
         width: 50px;
     }
     /* 二维码的closeBtn */
-    .xui-closeBtn{
-        width: 30px;
+    .xui-closeBtn {
         height: 30px;
-        position: absolute;
-        top:0;
-        right: 0;
+        padding-left: 235px;
+        position: fixed;
+        top: 12%;
+        width: 45px;
     }
     .xui-successHint {
         background: none repeat scroll 0 0 #fff;
@@ -79,6 +79,7 @@
         top: 20%;
         width: 60%;
         z-index: 11111;
+        text-align: center;
     }
     .xui-spritebg.xui-successHint-img {
         display: inline-block;
@@ -99,7 +100,6 @@
     .xa-attention-guest .xui-twoDimensionBox{
         text-align: left;
     }
-
     .xui-attention .xui-twoDimensionBox {
         background: url("/termite_static/img/component/powerme/attention.png") no-repeat scroll 0 0 / 100% auto #fff;
         border-radius: 8px;
