[X-Ray][b_mall_6032]修复非会员不可点击的蒙版

--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -112,6 +112,9 @@
                 {% if not request.member.is_subscribed %}
                     data-is-show-button="true"
                 {% endif %}
+                {% if not hide_non_member_cover %}
+                    data-is-show-cover="true"
+                {% endif %}
                 data-id="{{request.webapp_owner_id}}"
                 data-qrcode-image="{{ request.webapp_owner_info.qrcode_img }}"
                 data-varnish="{{is_varnish_url}}"
