[f_mall_6088][朱天琦]前移下单页面有无收货地址的判断

--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -4,6 +4,7 @@
 <!DOCTYPE html>
 <html class="{% if user.is_from_android %} android{% endif %}{% if not user.is_from_weixin %} notweixin{% endif %}">
     <head>
+        {% block init %}{% endblock %}
         <meta charset="UTF-8" />
         <title>{{ page_title }}</title>
         {% if request.enable_sql_monitor %}
