[X-Ray][b_mall_6087]解决页面偏移，使pc端调试移动端页面时实现友好展示

--- a/weapp/market_tools/tools/share_red_envelope/templates/shareRedEnvelope/webapp/share_red_envelope.html
+++ b/weapp/market_tools/tools/share_red_envelope/templates/shareRedEnvelope/webapp/share_red_envelope.html
@@ -116,6 +116,9 @@
       var clientWidth = docEl.clientWidth;
       if (!clientWidth) return;
       docEl.style.fontSize = 20 * (clientWidth / 320) + 'px';
+      if(20 * (clientWidth / 320) > 40){
+        docEl.style.fontSize = 40+ 'px';
+      }
     };
 
     if (!doc.addEventListener) return;
