--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -96,7 +96,7 @@
         <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" name="viewport">
         <meta content="telephone=no" name="format-detection">
     </head>
-    <body data-ui-role="integralMechanism" data-value="{{ cur_request_member.token }}" data-key="fmt" is-under-develop="{{ under_develop }}" style="max-width:640px;margin:0 auto;">
+    <body data-ui-role="integralMechanism" data-value="{{ cur_request_member.token }}" data-key="fmt" is-under-develop="{{ under_develop }}">
         <!-- xt-errMsg for test -->
         <input id="xt-errMsg" type="hidden" value="" />
 
