--- a/weapp/termite/static/css/common_widget.css
+++ b/weapp/termite/static/css/common_widget.css
@@ -159,6 +159,7 @@
 .wui-template-globalNavbar .xui-globalSideBar{
     position: fixed;
     bottom: 0;
+    left: 0;
     width: 100%;
     height: 50px;
     background: #21292B;
