--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -4,6 +4,9 @@
 html, body {
     background-color: #f0f0f0;
     height: 100%;
+    max-width:640px;
+    margin:0 auto;
+    position: relative;
     -webkit-tap-highlight-color:rgba(0,0,0,0);
 } 
 input,textarea{
@@ -252,6 +255,7 @@ input,textarea{
     height:46px;
     padding-top: 1px;
     bottom: 0;
+    left: 0;
     background-color: #f1f1f1;
     box-shadow:0 -1px rgba(0,0,0,.05),inset 0 1px rgba(255,255,255,.5)
 }
@@ -1913,6 +1917,7 @@ input.ui-input-text, textarea.ui-input-text {
     font-size: 0.9em;
     position: fixed;
     width: 100%;
+    max-width: 630px;
     z-index: 999;
 }
 .xui-proviceTag{
@@ -2127,6 +2132,7 @@ input.ui-input-text, textarea.ui-input-text {
     position: absolute;
     margin: 0 auto;
     position: fixed;
+    left: 0;
     -webkit-transition:all 0.4s ease-in-out;
     z-index: 10000;
     display: none;
@@ -2162,7 +2168,7 @@ input.ui-input-text, textarea.ui-input-text {
     background-color:#5acdf8;
     width: 100%;
     min-height: 111px;
-    background-size: 1.34% 12%,1.34% 12%,auto,95px;
+    background-size: 3px 12px,3px 12px,auto,95px;
     background-repeat: repeat-y,repeat-y,repeat,no-repeat;
     -webkit-box-sizing:border-box;
     -moz-box-sizing:border-box;
@@ -2705,6 +2711,7 @@ input.ui-input-text, textarea.ui-input-text {
     position:fixed;
     z-index: 2;
     top:0;
+    left: 0;
     background: #f0f0f0;
 }
 .xui-orderListPage .wui-swiper-tabs a {
@@ -4211,6 +4218,7 @@ a.xui-pointCardLink:link,a.xui-pointCardLink:visited{color:#fff;}
     background:#f0f0f0;
     position:fixed;
     bottom:0px;
+    left: 0;
     width:100%;
     z-index:1110;
     line-height: 75px;
