--- a/weapp/static_v2/js/view/common_select_website_link_view/template.html
+++ b/weapp/static_v2/js/view/common_select_website_link_view/template.html
@@ -6,6 +6,7 @@
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="product">商品及分组</a></li>
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="webappHome">店铺主页</a></li>
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="member">会员主页</a></li>
+    <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="shoppingCart">购物车</a></li>
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="marketPage">营销推广</a></li>
     {{if member_qrcode}}
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="memberQrcode">推广扫码</a></li>
