[b_wechat_3.0_6071][liupeiyu]【店铺装修】微页面列表中不显示促销价bug

--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -523,7 +523,7 @@
                     var _this = this;
                     $(".wa-item-product").each(function(){
                         // 商品原价
-                        var price = $(this).data('product-price').toFixed(2);
+                        var price = $(this).data('product-price');
                         // 商品有促销
                         var productPromotion = $(this).data('product-promotion');
                         var isMemberProduct = $(this).hasClass('xa-member-product');
